force-app/main/default/objects/Incident_Response_Management__c/Incident_Response_Management__c.object-meta.xml
<CustomObject>
    <label>Incident Response Management</label>
    <nameField>
        <displayFormat>INC-{00000}</displayFormat>
        <label>Incident Response Management No:</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incident Responses Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>