force-app/main/default/objects/Incident_Response_Management__c/fields/Address_Location__c.field-meta.xml
<CustomField>
    <fullName>Address_Location__c</fullName>
    <label>Address Location</label>
    <type>Address</type>
</CustomField>