force-app/main/default/objects/Incident_Response_Management__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical Emergency</fullName>
            </value>
            <value>
                <fullName>Fire</fullName>
            </value>
            <value>
                <fullName>Security Incident</fullName>
            </value>
            <value>
                <fullName>Accident/Injury</fullName>
            </value>
            <value>
                <fullName>Natural Disaster</fullName>
            </value>
            <value>
                <fullName>Hazardous Material</fullName>
            </value>
            <value>
                <fullName>Public Health</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
            <value>
                <fullName>Operational Disruption</fullName>
            </value>
            <value>
                <fullName>Aid Delivery/Program</fullName>
            </value>
            <value>
                <fullName>Behavioral/Health-Related</fullName>
            </value>
            <value>
                <fullName>Facility/Property</fullName>
            </value>
            <value>
                <fullName>Road Safety/Transport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>