force-app/main/default/objects/Incident_Response_Management__c/fields/Detected_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Detected_Date_Time__c</fullName>
    <label>Detected Date Time</label>
    <type>DateTime</type>
</CustomField>