force-app/main/default/objects/Incident_Response_Management__c/fields/Incident_Description__c.field-meta.xml
<CustomField>
    <fullName>Incident_Description__c</fullName>
    <description>Detailed narrative of the emergency incident</description>
    <label>Incident Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>