force-app/main/default/objects/Incident_Response_Management__c/fields/Incident_Summary__c.field-meta.xml
<CustomField>
    <fullName>Incident_Summary__c</fullName>
    <label>Incident Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>