force-app/main/default/objects/Incident_Response_Management__c/fields/Is_Major_Incident__c.field-meta.xml
<CustomField>
    <fullName>Is_Major_Incident__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Major Incident</label>
    <type>Checkbox</type>
</CustomField>