force-app/main/default/objects/Incident_Response_Management__c/fields/Medical_History__c.field-meta.xml
<CustomField>
    <fullName>Medical_History__c</fullName>
    <label>Medical History</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>