force-app/main/default/objects/Incident_Response_Management__c/fields/Resolution_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Date_Time__c</fullName>
    <label>Resolution Date Time</label>
    <type>DateTime</type>
</CustomField>