force-app/main/default/objects/Incident_Response_Management__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cardiac Arrest</fullName>
            </value>
            <value>
                <fullName>Respiratory Distress</fullName>
            </value>
            <value>
                <fullName>Trauma</fullName>
            </value>
            <value>
                <fullName>Infectious Disease</fullName>
            </value>
            <value>
                <fullName>Mental Health Crisis</fullName>
            </value>
            <value>
                <fullName>Structure Fire</fullName>
            </value>
            <value>
                <fullName>Wildfire</fullName>
            </value>
            <value>
                <fullName>Electrical Fire</fullName>
            </value>
            <value>
                <fullName>Vehicle Fire</fullName>
            </value>
            <value>
                <fullName>Explosion</fullName>
            </value>
            <value>
                <fullName>Unauthorized Access</fullName>
            </value>
            <value>
                <fullName>Theft</fullName>
            </value>
            <value>
                <fullName>Assault</fullName>
            </value>
            <value>
                <fullName>Vandalism</fullName>
            </value>
            <value>
                <fullName>Armed Activity</fullName>
            </value>
            <value>
                <fullName>Bomb Threat</fullName>
            </value>
            <value>
                <fullName>Cybersecurity Breach</fullName>
            </value>
            <value>
                <fullName>Slip/Fall</fullName>
            </value>
            <value>
                <fullName>Vehicle Accident</fullName>
            </value>
            <value>
                <fullName>Equipment Injury</fullName>
            </value>
            <value>
                <fullName>Workplace Injury</fullName>
            </value>
            <value>
                <fullName>Near Miss</fullName>
            </value>
            <value>
                <fullName>Earthquake</fullName>
            </value>
            <value>
                <fullName>Flood</fullName>
            </value>
            <value>
                <fullName>Hurricane</fullName>
            </value>
            <value>
                <fullName>Tornado</fullName>
            </value>
            <value>
                <fullName>Severe Weather</fullName>
            </value>
            <value>
                <fullName>Landslide</fullName>
            </value>
            <value>
                <fullName>Chemical Spill</fullName>
            </value>
            <value>
                <fullName>Gas Leak</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>