force-app/main/default/objects/Incident_Response_Management__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Subject of the Incident Emergency Response in order to act.</description>
    <label>Subject</label>
    <type>TextArea</type>
</CustomField>