force-app/main/default/objects/Incident_Response_Management__c/fields/Symptoms__c.field-meta.xml
<CustomField>
    <fullName>Symptoms__c</fullName>
    <label>Symptoms</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>