force-app/main/default/objects/Incident_Response_Management__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Address_Location__City__s</columns>
    <columns>Address_Location__StateCode__s</columns>
    <columns>Detected_Date_Time__c</columns>
    <columns>Medical_History__c</columns>
    <columns>Status__c</columns>
    <columns>Incident_Description__c</columns>
    <columns>Category__c</columns>
    <columns>Sub_Category__c</columns>
    <columns>Address_Location__PostalCode__s</columns>
    <columns>Address_Location__CountryCode__s</columns>
    <columns>Address_Location__Street__s</columns>
    <columns>End_Date_Time__c</columns>
    <columns>Is_Major_Incident__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>